# sppl

./: .gitignore  Cargo.toml  LICENSE  README.md  prek.toml
.github/workflows/: ci.yml  release.yml
crates/sppl/: Cargo.toml
crates/sppl/src/: axum.rs  build.rs  lib.rs
crates/sppl/tests/: resolve.rs
crates/sppl/tests/fixtures/static/app/: index.html
crates/sppl/tests/fixtures/static/assets/: main.css
examples/app/: deno.json  package.json  svelte.config.js
examples/app/src/: app.html
examples/app/src/lib/: api.ts
examples/app/src/routes/: +layout.svelte  +layout.ts  +page.svelte
examples/server/: Cargo.toml  build.rs
examples/server/src/: main.rs
