[package]
name = "sppl"
version.workspace = true
description = "Embed static Svelte (and other static) apps into Rust servers."
readme = "../../README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["axum"]
axum = ["dep:axum", "dep:tower", "dep:http", "dep:bytes"]

[dependencies]
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
flate2 = "1"

axum = { version = "0.7", optional = true, default-features = false }
tower = { version = "0.5", optional = true }
http = { version = "1", optional = true }
bytes = { version = "1", optional = true }
